--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         <!-- <div id="score" class="score">
             <p>X points : 0</p>
             <p>O points : 0</p>
-        </div>
-        <button id="restart" class="restart-btn">Restart</button> -->
+        </div>-->
+        <form>
+            <button type="submit" class="restart">Restart</button> 
+        </form>
     </div>
 <script src="jsgame.js"></script>
 </body>
